--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@
     </p>
     <hr>
     <h2>Others</h2>
-    <a href=".//public/hobbies.html">Hobbies</a></br>
-    <a href="../4.3 HTML Porfolio Project/public/contact.html">Contact Me</a>
+    <a href="./public/hobbies.html">Hobbies</a></br>
+    <a href="./public/contact.html">Contact Me</a>
     <footer>
         <p>© João Alegre All rights reserved.</p>
     </footer>
